--- a/src/components/featuredVideo/featuredVideo.module.scss
+++ b/src/components/featuredVideo/featuredVideo.module.scss
@@ -1,6 +1,7 @@
 .featuredVideoContainer {
   position: relative;
   width: 100%;
+  background-color: black;
 
   .infoContainer {
     position: absolute;
@@ -61,7 +62,7 @@
   .backgroundContent {
     width: 100%;
     height: 100%;
-    max-height: 1200px;
+    max-height: 60vh;
     
     &.video {
       object-fit: fill;
